--- a/DataMapper/DataMapper.csproj
+++ b/DataMapper/DataMapper.csproj
@@ -67,11 +67,15 @@
     <Compile Include="Interfaces\DataAccess\IEditionRepository.cs" />
     <Compile Include="Interfaces\DataAccess\ILoanRepository.cs" />
     <Compile Include="Interfaces\DataAccess\IRepository.cs" />
-    <Compile Include="Migrations\202001131956289_InitialRedoMigration.cs" />
+    <Compile Include="Migrations\202001131956289_InitialRedoMigration.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Migrations\202001131956289_InitialRedoMigration.designer.cs">
       <DependentUpon>202001131956289_InitialRedoMigration.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\Configuration.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
