--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -56,6 +59,7 @@
     <Compile Include="Interfaces\ILoanService.cs" />
     <Compile Include="Services\AddressService.cs" />
     <Compile Include="Services\AuthorService.cs" />
+    <Compile Include="Services\Service.cs" />
     <Compile Include="Services\BookService.cs" />
     <Compile Include="Services\BorrowerService.cs" />
     <Compile Include="Services\DomainService.cs" />
@@ -74,7 +78,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Data\constants.json" />
+    <None Include="Data\external-data.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="stylecop.json" />
