--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Services\AddressService.cs" />
     <Compile Include="Services\AuthorService.cs" />
     <Compile Include="Services\Service.cs" />
-    <Compile Include="Services\BookService.cs" />
+    <Compile Include="Services\BookService.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Services\BorrowerService.cs" />
     <Compile Include="Services\DomainService.cs" />
     <Compile Include="Services\EditionService.cs" />
