--- a/TestServices/TestServices.csproj
+++ b/TestServices/TestServices.csproj
@@ -71,14 +71,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddressServiceTest.cs" />
     <Compile Include="AuthorServiceTest.cs" />
     <Compile Include="BookServiceTest.cs" />
     <Compile Include="BorrowerServiceTest.cs" />
+    <Compile Include="DomainServiceTest.cs" />
+    <Compile Include="EditionServiceTest.cs" />
+    <Compile Include="LoanServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Data\external-data.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
