--- a/TestServices/TestServices.csproj
+++ b/TestServices/TestServices.csproj
@@ -77,6 +77,7 @@
     <Compile Include="BorrowerServiceTest.cs" />
     <Compile Include="DomainServiceTest.cs" />
     <Compile Include="EditionServiceTest.cs" />
+    <Compile Include="Helpers\EnumerableExtensions.cs" />
     <Compile Include="LoanServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceTest.cs" />
