--- a/LibraryManagementApp/App.config
+++ b/LibraryManagementApp/App.config
@@ -11,7 +11,7 @@
   
   <log4net>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
-      <file value="logfile.txt"/>
+      <file value="LibraryManagementLog.txt"/>
       <appendToFile value="true"/>
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] – %message%newline"/>
