--- a/docs/DataMapper.dll.config
+++ b/docs/DataMapper.dll.config
@@ -6,6 +6,21 @@
           type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
           requirePermission="false"/>
     </configSections>
+  
+    <log4net>
+      <appender name="FileAppender" type="log4net.Appender.FileAppender">
+        <file value="DataMapperLog.txt"/>
+        <appendToFile value="true"/>
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] – %message%newline"/>
+        </layout>
+      </appender>
+      <root>
+        <level value="DEBUG"/>
+        <appender-ref ref="FileAppender"/>
+      </root>
+    </log4net>
+  
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
